--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "BSD-3-Clause",
   "author": "Jaakko Ylinen",
   "dependencies": {
+    "angular-bootstrap-datetimepicker": "^1.1.3",
     "body-parser": "1.15.2",
     "express": "4.14.0"
   }
